# bifixer

./: .gitignore  .gitmodules  MANIFEST.in  README.md  optional-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
bifixer/: __init__.py  bifixer.py  bifixer_lite.py  bifixer_setup.py  bifixer_teardown.py  monofixer.py  replacements.hunspell.en  restorative_cleaning.py  segmenter.py  util.py
bifixer/detok/: detok.mt
bifixer/replacements/: replacements.da  replacements.de  replacements.en  replacements.es  replacements.fr  replacements.nb  replacements.nl  replacements.pt  replacements.tr
conda_build/: make_build.sh  meta.yaml
conda_build/bifixer/: build.sh  meta.yaml
scripts/: bifixer  monofixer
src/bifixer/: __init__.py  bifixer.py  monofixer.py  restorative_cleaning.py  segmenter.py  util.py
src/bifixer/replacements/: replacements.da  replacements.de  replacements.en  replacements.tr
src/tests/: input_test_1.txt  input_test_2.txt  test_bifixer.py
tests/: output_test_1.txt  test_bifixer.py
